result/instance20/result0/planning_result.txt

  File "/home/changmin/PycharmProjects/OPTPlan/result/instance20/result0/planning.py", line 88
    The robot actions are designed to follow the given rules and constraints for bin packing. The preconditions ensure that actions are only performed when the robot is in the correct state and the objects meet the necessary criteria. For example, the robot cannot pick up an object if it is already holding something, and it cannot place a fragile object in a bin without an elastic object. The effects update the state of the robot and objects to reflect the changes made by the actions, ensuring consistency and adherence to the rules. This approach ensures that the robot's actions are logical and follow the specified constraints, making the bin packing process efficient and error-free
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 88)


